# my-claude-plugins

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md
.agents/: v1-notes.md
.claude-plugin/: marketplace.json
plugins/auto-memory/.claude-plugin/: plugin.json
plugins/auto-memory/hooks/: hooks.json  session-start.sh
plugins/basedpyright-lsp/: .lsp.json  README.md
plugins/basedpyright-lsp/.claude-plugin/: plugin.json
plugins/better-comments/.claude-plugin/: plugin.json
plugins/frontmatter/.claude-plugin/: plugin.json
plugins/project-notes/: CLAUDE.md  README.md
plugins/project-notes/.claude-plugin/: plugin.json
plugins/python-dev/: README.md
plugins/python-dev/.claude-plugin/: plugin.json
plugins/python-developer/.claude-plugin/: plugin.json
plugins/python-prefs/: README.md
plugins/python-prefs/.claude-plugin/: plugin.json
plugins/session-setup/: README.md
plugins/session-setup/.claude-plugin/: plugin.json
plugins/session-setup/hooks/: hooks.json
plugins/setup-session/.claude-plugin/: plugin.json
plugins/spec-driven-dev/: CHANGELOG.md  CLAUDE.md  README.md
plugins/spec-driven-dev/.claude-plugin/: plugin.json
plugins/talk-to-me-mcp/: .mcp.json  README.md
plugins/talk-to-me-mcp/server/: pyproject.toml
plugins/talk-to-me-mcp/server/src/talk_to_me_mcp/: __init__.py
plugins/theo-calvin-testing/: CHANGELOG.md  README.md
plugins/ticket-cli/: README.md
resources/: claude-code-plan-mode-instructions.md
spec-driven-dev/: README.md
spec-driven-dev/.claude-plugin/: plugin.json
spec-driven-dev/commands/: new-spec.md
(+57 files in other folders)
